[package]
name = "tobus_approaching"
version = "0.1.0"
authors = ["reta <reta428@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.62"
serde_json = "1.0.53"
ureq = {version = "1.1.0", features = ["json"]}
serde = {version = "1.0.110", features = ["derive"]}
chrono = {version = "0.4.11", features = ["serde"]}
